@@ -1,16 +1,16 @@
-LAYOUT(ControlPanelLayout, 380, 432)
-	ITEM(StaticText, dv___0, SetText(t_("Select skin:")).SetAlign(ALIGN_RIGHT).LeftPosZ(8, 56).TopPosZ(6, 19))
-	ITEM(Button, layoutbutton, SetLabel(t_("Reset Layout")).Tip(t_("Press to reset window layout.")).RightPosZ(18, 110).TopPosZ(6, 19))
-	ITEM(ArrayCtrl, list, HorzGrid(false).VertGrid(false).AskRemove(false).AutoHideSb(true).SetFrame(FieldFrame()).HSizePosZ(8, 8).VSizePosZ(208, 12))
-	ITEM(Option, TabOptionIcon, SetLabel(t_("Show Icons")).LeftPosZ(16, 156).TopPosZ(64, 16))
-	ITEM(Option, TabOptionClose, SetLabel(t_("Show Buttons")).LeftPosZ(16, 156).TopPosZ(84, 16))
-	ITEM(Option, AutoOptionClose, SetLabel(t_("Show Buttons")).HSizePosZ(200, 60).TopPosZ(84, 16))
-	ITEM(Option, AutoOptionIcon, SetLabel(t_("Show Icons")).HSizePosZ(200, 60).TopPosZ(64, 16))
-	ITEM(DropList, skinlist, HSizePosZ(72, 144).TopPosZ(6, 19))
-	ITEM(LabelBox, TabOptions, SetLabel(t_("Tab Options")).LeftPosZ(6, 178).TopPosZ(44, 104))
-	ITEM(Option, TabOptionNest, SetLabel(t_("Allow Nested Tabs")).LeftPosZ(16, 156).TopPosZ(124, 16))
-	ITEM(Option, TabOptionAlignment, SetLabel(t_("Auto Align Tabs")).LeftPosZ(16, 156).TopPosZ(104, 16))
-	ITEM(LabelBox, AutoOptions, SetLabel(t_("AutoHide Options")).HSizePosZ(192, 10).TopPosZ(44, 104))
-	ITEM(Label, dv___12, SetLabel(t_("Below are the available dockable window.\nLeft clicking on the items will popup the action menu for the selected item.")).LeftPosZ(10, 360).TopPosZ(164, 36))
+LAYOUT(ControlPanelLayout, 444, 464)
+	ITEM(StaticText, dv___0, SetText(t_("Select skin:")).LeftPosZ(8, 120).TopPosZ(8, 22))
+	ITEM(Button, layoutbutton, SetLabel(t_("Reset Layout")).Tip(t_("Press to reset window layout.")).RightPosZ(10, 110).TopPosZ(8, 22))
+	ITEM(ArrayCtrl, list, HorzGrid(false).VertGrid(false).AskRemove(false).AutoHideSb(true).SetFrame(FieldFrame()).HSizePosZ(8, 8).VSizePosZ(208, 8))
+	ITEM(Option, TabOptionIcon, SetLabel(t_("Show Icons")).LeftPosZ(20, 188).TopPosZ(64, 16))
+	ITEM(Option, TabOptionClose, SetLabel(t_("Show Buttons")).LeftPosZ(20, 188).TopPosZ(84, 16))
+	ITEM(Option, AutoOptionClose, SetLabel(t_("Show Buttons")).LeftPosZ(236, 192).TopPosZ(84, 16))
+	ITEM(Option, AutoOptionIcon, SetLabel(t_("Show Icons")).LeftPosZ(236, 192).TopPosZ(64, 16))
+	ITEM(DropList, skinlist, HSizePosZ(136, 128).TopPosZ(8, 22))
+	ITEM(LabelBox, TabOptions, SetLabel(t_("Tab Options")).LeftPosZ(8, 208).TopPosZ(44, 108))
+	ITEM(Option, TabOptionNest, SetLabel(t_("Allow Nested Tabs")).LeftPosZ(20, 188).TopPosZ(124, 16))
+	ITEM(Option, TabOptionAlignment, SetLabel(t_("Auto Align Tabs")).LeftPosZ(20, 188).TopPosZ(104, 16))
+	ITEM(LabelBox, AutoOptions, SetLabel(t_("AutoHide Options")).LeftPosZ(224, 212).TopPosZ(44, 108))
+	ITEM(Label, dv___12, SetLabel(t_("Below are the available dockable window.\nLeft clicking on the items will popup the action menu for the selected item.")).HSizePosZ(10, 10).TopPosZ(164, 36))
 END_LAYOUT
 
